--- a/style.css
+++ b/style.css
@@ -773,10 +773,10 @@ h6 {
         padding: 5px;
         width: 300px;
       }
-      .one {
+      .anim one {
         display: none;
       }
-      .two {
+      .anim two {
         display: none;
       }
       br {
