--- a/style.css
+++ b/style.css
@@ -672,6 +672,7 @@ h6 {
     .heading {
         margin-top: 100px;
         margin-left: 0;
+        margin-bottom: 100px;
     }
       
     .black {
