--- a/style.css
+++ b/style.css
@@ -673,7 +673,6 @@ h6 {
     .heading {
         margin-top: 100px;
         margin-left: 0;
-       
     }
       
     .black {
@@ -723,7 +722,7 @@ h6 {
     }
     .cloud {
         font-size: 12px;
-        margin-left: 0;
+        margin-left: 20px;
     }
     .animate-pulse {
         width: 30px;
